--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@ AllCops:
     - "README.md"
     - "Guardfile"
     - "Rakefile"
-    - "spec"
+    - "spec/spec_helper.rb"
 
   DisplayCopNames: true
 
